recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int){
	var etape:Int=steps
	
	
	while (etape!=0) {
	avance(pas)
	gauche(angle)
	spiral(etape, angle, length+increment, increment)
	etape=etape-1
	}
	
	
}

